--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-parallax": "^3.5.1",
     "swiper": "^11.1.5",
     "tailwindcss": "^3.4.6",
     "tailwindcss-filters": "^3.0.0",
