--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-parallax": "^3.5.1",
+    "rollup-plugin-copy": "^3.5.0",
     "swiper": "^11.1.5",
     "tailwindcss": "^3.4.6",
     "tailwindcss-filters": "^3.0.0",
     "tailwindcss-text-fill": "^0.2.0",
     "vite-plugin-remove-console": "^2.2.0",
+    "vite-plugin-static-copy": "^1.0.6",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-svgr": "^4.2.0"
   },
